@@ -1,3 +1,10 @@
+2004-12-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el (tramp-smb-file-name-handler-alist): Add entry for
+	`substitute-in-file-name.
+	(tramp-smb-handle-substitute-in-file-name): New defun.
+	(tramp-smb-advice-PC-do-completion): Delete advice.
+
 2004-12-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-maybe-send-perl-script): Change order of
